--- a/_config.yml
+++ b/_config.yml
@@ -22,8 +22,8 @@ title: life of a twenty something
 email: anjanasrirams@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   documenting my life :sunflower:
-baseurl: /loats # the subpath of your site, e.g. /blog
-url: https://anjsri878.github.io # the base hostname & protocol for your site, e.g. http://example.com
+# baseurl: /loats # the subpath of your site, e.g. /blog
+url: https://thelifeofanj.com # the base hostname & protocol for your site, e.g. http://example.com
 instagram_username: localanjana
 # twitter_username: jekyllrb
 # github_username:  jekyll
