--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: the life of anj
-email: anjanasrirams@gmail.com
+email: thelifeofanj@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   documenting my life :sunflower:
 # baseurl: /loats # the subpath of your site, e.g. /blog
@@ -45,6 +45,9 @@ mail_subject: "new post from thelifeofanj.com"
 mail_intro: "Hi my lovely friends! Hope you enjoy this new post..."
 mail_read_more: "continue reading..."
 mail_closing: "Hope you enjoy the latest post :)"
+
+
+
 
 
 # Exclude from processing.
